--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,9 @@
 {
   "name": "curious-js",
   "version": "0.0.1",
+  "ignore": [ ],
   "main": [
     "./curious.js"
   ],
-  "ignore": [ "**/**" ],
-  "dependencies": {
-  }
+  "dependencies": { }
 }
