Add mocha JS test framework

--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,9 @@
   "main": [
     "./curious.js"
   ],
-  "dependencies": { }
+  "dependencies": {
+  },
+  "devDependencies": {
+    "mocha": "~2.2.5"
+  }
 }
