--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "main": "./curious.js",
   "scripts": {
+    "lint": "./scripts/lint",
     "make_doc": "./scripts/make_doc",
     "prepublish": "./scripts/make_doc",
     "release_doc": "./scripts/release_doc",
