--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
+      - ./.eslintrc.yaml:/usr/src/curious-js/.eslintrc.yaml
       - ./curious.js:/usr/src/curious-js/curious.js
       - ./scripts:/usr/src/curious-js/scripts
       - ./tests:/usr/src/curious-js/tests
