--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "~0.5.4",
     "babel-eslint": "^7.1.1",
     "chai": "~2.3.0",
+    "es6-promise": "^4.0.5",
     "eslint-config-airbnb-es5": "^1.1.0",
     "eslint-plugin-react": "^6.7.1",
     "jsdoc": "~3.3.0",
