Add rollup and configuration

--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
   "bugs": "https://github.com/ginkgobioworks/curious-js/issues",
   "version": "2.4.6",
   "license": "MIT",
-  "main": "./curious.js",
+  "main": "dist/curious.cjs.js",
+  "module": "dist/curious.esm.js",
+  "unpkg": "dist/curious.umd.js",
   "scripts": {
-    "test": "mocha tests",
-    "prepublish": "npm run make_doc",
+    "test": "mocha --compilers js:babel-register tests",
+    "build": "rollup -c",
+    "clean": "rimraf dist",
+    "dev": "rollup -c -w",
+    "prepublish": "npm run clean && npm run build && npm run make_doc",
     "postpublish": "npm run release_doc",
     "lint": "eslint curious.js tests && echo OK",
     "make_doc": "./scripts/make_doc",
@@ -37,15 +42,22 @@
   "devDependencies": {
     "axios": "^0.5.4",
     "babel-eslint": "^7.2.3",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "chai": "^2.3.0",
     "es6-promise": "^4.1.1",
     "eslint-config-airbnb-es5": "^1.2.0",
     "eslint-plugin-react": "^6.10.3",
     "jsdoc": "^3.5.5",
     "mocha": "^2.5.3",
-    "mocha-eslint": "^3.0.1"
+    "mocha-eslint": "^3.0.1",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.56.2"
   },
   "engines": {
     "node": ">=0.10.0"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
